[package]
name = "montlike"
version = "0.1.0"
authors = ["Aitor Miguel Blanco <aitormibl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcod = { git = "https://github.com/tomassedovic/tcod-rs" }
rand = "0.3.9"
